--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<br><br>
 			Conoce nuestra visión y misión.</p>
 			<div class="form">
-				<a href="html/nosotros/nosotros.html">
+				<a href="html/Nosotros/nosotros.html">
 					<div>Ver más</div>
 				</a>
 			</div>
